--- a/team3C/Prototype/client/package.json
+++ b/team3C/Prototype/client/package.json
@@ -7,8 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "docx": "^9.2.0",
+    "express": "^4.21.2",
+    "lucide-react": "^0.474.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
