--- a/team3C/Prototype/server/package.json
+++ b/team3C/Prototype/server/package.json
@@ -9,14 +9,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
+    "docx": "^9.2.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "fs": "^0.0.1-security",
+    "groq": "^3.73.0",
     "mammoth": "^1.9.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.7",
+    "openai": "^4.83.0",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "winston": "^3.17.0",
     "xlsx": "^0.18.5"
   }
 }
